--- a/Pr1-1.html
+++ b/Pr1-1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style Pr1.css" />
   </head>
   <body>
     <h1 id="SS">Home Page</h1>
@@ -13,9 +14,19 @@
     <br />
     <a href="./Sign up Form.html">form</a><br />
     <a href="https://www.youtube.com/watch?v=6_9_Wj8V5Q4"
-      ><img src="./charminar.jpg" width="60" height="30" alt=""
+      ><img src="./charminar.jpg"
     /></a>
-    <h1>Sowmya &copy;</h1>
+    <div>
+      <h3>About Hyderabad</h3>
+      <p>
+        Hyderabad was founded in 1591 and planned as a grid with the Charminar
+        at its centre. It has now grown well beyond the confines of the original
+        walled city,to include a new town north of the Musi river, the Military
+        Cantonment at Secunderabad and a burgeoning high-tech Estate, nicknamed
+        “Cyberabad”.
+      </p>
+    </div>
+    Sowmya &copy;
     <br />
     <br />
     <br />
