made some changes

--- a/SS Electronics/SS Electronics.html
+++ b/SS Electronics/SS Electronics.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SS Electronic Appliances</title>
-    <style>
-      div {
-        background-color: #98d355;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
+    <div class="color">
       <h1 style="color: rgb(206, 64, 39); font-size: 40px">
         <center>Welcome to SS Electronic Appliances</center>
       </h1>
@@ -27,13 +23,15 @@
         <input type="search" placeholder="Search for Products" id="" />
       </p>
     </div>
-    <p>
-      <b>Wide range of products</b><br />Wide range of products across all
-      categories of electronics.
-    </p>
+    <div>
+      <h3>Wide range of products</h3>
+      <p>Wide range of products across all categories of electronics.</p>
+    </div>
     <p><img src="S1.jpg" alt="Television" width="1200" height="300" /></p>
     <a href="https://www.bajajelectronics.com/"> Visit the Link</a><br />
     <br />
+    Shop By Brands
+
     <footer>
       <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       <a href="#ss">Back to Home</a>
