--- a/Pr1-1.html
+++ b/Pr1-1.html
@@ -5,17 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style Pr1.css" />
+    <style>
+      h1 {
+        background-color: #bfd5e7;
+      }
+
+      div.Menu-bar {
+        background-color: #d17b7b;
+        overflow: auto;
+        white-space: nowrap;
+        border: 2px solid #c23d08a6;
+      }
+
+      div.Menu-bar a {
+        display: inline-block;
+        color: #d9f55e;
+        font-size: 20px;
+        text-align: center;
+        padding: 14px;
+        text-decoration: solid;
+      }
+
+      div.Menu-bar a:hover {
+        border-top: 2px solid #c23d08a6;
+      }
+    </style>
   </head>
   <body>
-    <h1 id="SS">Home Page</h1>
-    <a href="https://www.youtube.com/watch?v=6_9_Wj8V5Q4" target="_blank">
-      Visit the link to know more about HTML</a
-    >
+    <h1 style="color: #cc062e">Hello Hyderabadis..</h1>
+    <div class="Menu-bar">
+      <a href="./Pr1-1.html">Home</a>
+      <a href="https://telanganatoday.com/hyderabad">News</a>
+      <a
+        href="https://hyderabad.telangana.gov.in/about-district/#:~:text=Hyderabad%20was%20founded%20in%201591,Estate%2C%20nicknamed%20%E2%80%9CCyberabad%E2%80%9D."
+        >About</a
+      >
+      <a href="https://tourism.telangana.gov.in/blogpage?id=1">Tourism</a>
+      <a href="https://www.britannica.com/place/Hyderabad-India#ref280113"
+        >History</a
+      >
+      <a href="#people">People</a>
+      <a href="#work">Work</a>
+    </div>
     <br />
-    <a href="./Sign up Form.html">form</a><br />
-    <a href="https://www.youtube.com/watch?v=6_9_Wj8V5Q4"
-      ><img src="./charminar.jpg"
-    /></a>
+    <a href="https://www.youtube.com/watch?v=QO8zqYbCitk" target="_blank">
+      Visit the link to know more about Hyderabad</a
+    >
+    <br /><br />
+    <a href="./Sign up Form.html">form</a><br /><br />
+    <img src="./charminar.jpg" width="426" height="240" /><img
+      src="./H2.jpg"
+      width="426"
+      height="240"
+    /><img src="./H3.jpg" width="426" height="240" />
     <div>
       <h3>About Hyderabad</h3>
       <p>
@@ -26,18 +68,23 @@
         “Cyberabad”.
       </p>
     </div>
+    <br />
+    <p1>
+      Hyderabad is known as The City of Pearls, as once it was the only global
+      centre for trade of large diamonds, emeralds and natural pearls. Many
+      traditional and historical bazaars are located around the city. </p1
+    ><br /><br />
+    <h2>District Map</h2>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243651.26565616904!2d78.31746323647808!3d17.409338730461712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb99daeaebd2c7%3A0x8bdfcb9125972333!2sHyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1635140621166!5m2!1sen!2sin"
+      height="450"
+      width="670"
+      style="border: 2px solid #13339b; pointer-events: visible"
+    ></iframe
+    ><br />
+    <br />
     Sowmya &copy;
-    <br />
-    <br />
-    <br />
-    <br /><b><br /><br /><br /><br /><br /><br /><br /></b> <br /><b
-      ><br /><br /><br /><br /><br /><br /><br /></b
-    ><br /><b><br /><br /><br /><br /><br /><br /><br /></b><br /><b
-      ><br /><br /><br /><br /><br /><br /><br
-    /></b>
-    <br /><b><br /><br /><br /><br /><br /><br /><br /></b><br /><b
-      ><br /><br /><br /><br /><br /><br /><br /></b
-    ><br /><b><br /><br /><br /><br /><br /><br /><br /></b>
+    <br /><br /><br /><br /><br /><br /><br />
     <a href="#SS">Back to the top</a>
   </body>
 </html>
