edited some code

--- a/Pr1-1.html
+++ b/Pr1-1.html
@@ -44,8 +44,6 @@
       <a href="https://www.britannica.com/place/Hyderabad-India#ref280113"
         >History</a
       >
-      <a href="#people">People</a>
-      <a href="#work">Work</a>
     </div>
     <br />
     <a href="https://www.youtube.com/watch?v=QO8zqYbCitk" target="_blank">
@@ -85,6 +83,6 @@
     <br />
     Sowmya &copy;
     <br /><br /><br /><br /><br /><br /><br />
-    <a href="#SS">Back to the top</a>
+    <a href="#top">Back to the top</a>
   </body>
 </html>
