--- a/Chat Page.html
+++ b/Chat Page.html
@@ -28,9 +28,9 @@
     <div class="card">
       <div class="main-heading"><h1>Rahul</h1></div>
       <p class="vara">Hello Rahul, how are you?</p>
-      <p class="rahul">Hi Varakumar, iam good. How about you?</p>
+      <p class="rahul">Hi Varakumar, Iam good. How about you?</p>
       <p class="vara">I'm fine. I published my webite recently</p>
-      <p class="rahul">Oh great Vrakumar! Can you send me the URL?</p>
+      <p class="rahul">Oh great Varakumar! Can you send me the URL?</p>
       <p class="vara">https://varakumar.ccbp.tech</p>
       <p class="rahul">Awesome Varakumar, where did you learn?</p>
       <p class="vara">NxtWave CCBP 4.0 Program</p>
