--- a/26th april/News Page.html
+++ b/26th april/News Page.html
@@ -38,7 +38,7 @@
             cricket league featuring 12 international cricketers, who will be
             competing against each other for the iB Cricket Super Over League
             title in Mumbai. Iconic cricketers like Virender Sehwag, Suresh
-            Raina, Brendon McCullum will be competing in the league.
+            Raina, Brendon McCullum will be competing in the league...
           </p>
         </div>
         <button class="button" type="button">Read more</button>
