--- a/26th april/Cricketer Page.html
+++ b/26th april/Cricketer Page.html
@@ -52,7 +52,7 @@
                 src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img2.png"
               />
             </div>
-            <div class="text">
+            <div class="text1">
               <h4>KXIP VS RCB</h4>
               <p1>
                 He scored an unbeaten 132 off just 69 balls against Royal
