practised some formats

--- a/26th april/Cricketer Page.html
+++ b/26th april/Cricketer Page.html
@@ -35,7 +35,7 @@
               Indian international cricketer who plays... more
             </p>
           </div>
-          <div clas="img1">
+          <div class="img1">
             <img
               src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/klrahul-img1.png"
             />
