--- a/30th April/music page.html
+++ b/30th April/music page.html
@@ -69,7 +69,7 @@
     </div>
 
     <div id="sectiondetailspage">
-      <div class="details1 d-flex flex-coloumn justify-content-between">
+      <div class="details1 d-flex flex-column justify-content-between">
         <div>
           <div class="top-card-image">
             <img
