--- a/30th April- web integration/music page.html
+++ b/30th April- web integration/music page.html
@@ -131,7 +131,7 @@
 
         <div class="d-flex">
           <button
-            type="buton"
+            type="button"
             class="bottom-button btn btn-primary"
             onclick="display('sectionhomepage')"
           >
