created new files

--- a/Web integration/tourist places..html
+++ b/Web integration/tourist places..html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -27,6 +28,59 @@
 
   <body>
     <div id="sectionhomepage">
+      <div class="container1 d-flex justify-content-center">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://p7.hiclipart.com/preview/529/189/194/computer-icons-navigation-bar-home-home.jpg"
+              alt="Logo"
+              width="30"
+              height="30"
+            />
+            Tourist places..
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarMenu"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Contact Us
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Mail Us</a>
+                  <a class="dropdown-item" href="#">Call Us</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+
       <div class="top-container d-flex justify-content-center">
         <div class="top-heading">
           <h2>
