--- a/Responsive web pages - 02nd May/food munch nav bar.html
+++ b/Responsive web pages - 02nd May/food munch nav bar.html
@@ -22,7 +22,7 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./food munch nav bar.html" />
+    <link rel="stylesheet" href="./food munch nav bar.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
