--- a/daily practise/website.html
+++ b/daily practise/website.html
@@ -214,6 +214,92 @@
         </div>
       </div>
     </div>
+    <div class="container4">
+      <h3 class="heading">DISCOVER</h3>
+
+      <div class="row">
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <img
+                src="https://in-exstatic-vivofs.vivo.com/gdHFRinHEMrj3yPG/1699347999920/1e176f686fac41b6864052636dd4c4bf.jpg"
+                class="w-100"
+              />
+            </div>
+            <div class="col-md-6 mb-4">
+              <img
+                src="https://in-exstatic-vivofs.vivo.com/gdHFRinHEMrj3yPG/1678447454226/018bc553b9d635593a17265b2e865dc7.jpg"
+                class="w-100"
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <img
+                src="https://in-exstatic-vivofs.vivo.com/gdHFRinHEMrj3yPG/1709610199000/a181ab6a128edd0b8ce849f0b075993b.jpg"
+                class="w-100"
+              />
+              <p>T2 Pro</p>
+              <p><strong>Get.Set.Turbo</strong></p>
+            </div>
+            <div class="col-md-6 mb-4">
+              <img
+                src="https://in-exstatic-vivofs.vivo.com/gdHFRinHEMrj3yPG/1699348184190/ebe78e6762ee1e0fa42eaddda3237de1.jpg"
+                class="w-100"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4">
+          <img
+            src="https://in-exstatic-vivofs.vivo.com/gdHFRinHEMrj3yPG/1699348133880/e3525f8bc68c28e076f3a2db8746062d.jpg"
+            class="w-100"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container5">
+      <section class="footer">
+        <div class="footer-row">
+          <div class="footer-col">
+            <h4>Popular Links</h4>
+            <ul class="links">
+              <li><a href="#">X100 Pro</a></li>
+              <li><a href="#">X100</a></li>
+              <li><a href="#">V30 Pro</a></li>
+              <li><a href="#">V30</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Purchase Online</h4>
+            <ul class="links">
+              <li><a href="#">E-store</a></li>
+              <li><a href="#">Buy Phones</a></li>
+              <li><a href="#">Buy accessories</a></li>
+              <li><a href="#">My Orders</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>Support</h4>
+            <ul class="links">
+              <li><a href="#">FAQs</a></li>
+              <li><a href="#">Service center</a></li>
+              <li><a href="#">Funtouch OS</a></li>
+              <li><a href="#">System Update</a></li>
+            </ul>
+          </div>
+          <div class="footer-col">
+            <h4>About Vivo</h4>
+            <ul class="links">
+              <li><a href="#">E-Waste Management</a></li>
+              <li><a href="#">Careers at Vivo</a></li>
+              <li><a href="#">Terms and conditions</a></li>
+              <li><a href="#">About Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <script
       type="text/javascript"
