--- a/coding-practise- 08th May/VR Website Trending Blogs Section.html
+++ b/coding-practise- 08th May/VR Website Trending Blogs Section.html
@@ -27,5 +27,74 @@
     ></script>
     <link rel="stylesheet" href="./VR Website Trending Blogs Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container shadow p-3">
+      <h1 class="h1">Trending Blogs</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 card-container p-3 mb-3 shadow">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-trending-blogs-1-img.png"
+              class="image w-100"
+            />
+            <div class="p-3">
+              <h1>Amazon</h1>
+              <p>
+                New Way to See the World. It is a simulated experience that can
+                be completely different from the real world.
+              </p>
+              <a href="">
+                READ MORE
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 card-container p-3 mb-3 shadow">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-trending-blogs-2-img.png"
+              class="image w-100"
+            />
+            <div class="p-3">
+              <h1>Advertising</h1>
+              <p>
+                The best one for you. Come experience the wonder of Google Earth
+                in virtual reality.
+              </p>
+              <a href="">
+                READ MORE
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-arrow-right"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+                  />
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 d-flex flex-row justify-content-end">
+            <button>View All</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
