--- a/coding-practise- 08th May/VR Website Optics and Controllers Section.html
+++ b/coding-practise- 08th May/VR Website Optics and Controllers Section.html
@@ -30,5 +30,48 @@
       href="./VR Website Optics and Controllers Section.css"
     />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 order-md-2 col-md-6 mt-4">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-optics-img.png"
+              class="image w-100"
+            />
+          </div>
+          <div
+            class="col-12 order-md-1 col-md-6 mt-2 mb-3 d-flex flex-column justify-content-center"
+          >
+            <h1>Improved Optics</h1>
+            <p>
+              A virtual reality headset is a head-mounted device that provides
+              virtual reality for the wearer.
+            </p>
+            <button>READ MORE</button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6 mt-4">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-controllers-img.png"
+              class="image w-100"
+            />
+          </div>
+          <div
+            class="col-12 col-md-6 mt-2 mb-3 d-flex flex-column justify-content-center"
+          >
+            <h1>Two Touch Controllers</h1>
+            <p>
+              Your Oculus Touch controllers are a pair of tracked controllers
+              that give you a hand.
+            </p>
+            <button>READ MORE</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
