--- a/coding-practise- 08th May/VR Website Products Section.html
+++ b/coding-practise- 08th May/VR Website Products Section.html
@@ -27,5 +27,34 @@
     ></script>
     <link rel="stylesheet" href="./VR Website Products Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 mb-2">
+          <h1 class="h1">Products</h1>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-md-6 mb-3">
+          <div class="bg-container d-flex flex-column justify-content-end">
+            <h1>VR Headset</h1>
+            <p>Rs 75,000</p>
+            <button>Buy Now</button>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 mb-3">
+          <div class="bg-container2 d-flex flex-column justify-content-end">
+            <h1>VR Headset and Two Touch Controllers</h1>
+            <p>Rs 90,000</p>
+            <button>Buy Now</button>
+          </div>
+          <div class="col-12 d-flex flex-row justify-content-end">
+            <button class="button mt-3">View All</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
