--- a/coding-practise- 08th May/VR Website Kit Section.html
+++ b/coding-practise- 08th May/VR Website Kit Section.html
@@ -27,5 +27,34 @@
     ></script>
     <link rel="stylesheet" href="./VR Website Kit Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container shadow p-3">
+      <h1 class="h1">Included VR Kit</h1>
+      <div class="container">
+        <div class="row">
+          <div class="text-center mt-3 p-2 col-12 col-md-4">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-1-img.png"
+              class="image w-100"
+            />
+            <h1>Two Touch Controllers</h1>
+          </div>
+          <div class="text-center mt-3 p-2 col-12 col-md-4">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-2-img.png"
+              class="image w-100"
+            />
+            <h1>VR Headset</h1>
+          </div>
+          <div class="text-center mt-3 p-2 col-12 col-md-4">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-3-img.png"
+              class="image w-100"
+            />
+            <h1>Charging cable</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
