--- a/coding-practise- 08th May/VR Website Features Section.html
+++ b/coding-practise- 08th May/VR Website Features Section.html
@@ -27,5 +27,79 @@
     ></script>
     <link rel="stylesheet" href="./VR Website Features Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container p-3">
+      <h1 class="h1">Features</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/easy-connect-img.png"
+            />
+            <h1>Easy to connect</h1>
+            <p>
+              Instead of viewing a screen in front of them, users are immersed
+              and able to interact with 3D words.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-capability-img.png"
+            />
+            <h1>VR Capability</h1>
+            <p>
+              Virtual reality (VR) can create an environment similar to or
+              completely different from the real world.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/video-games-img.png"
+            />
+            <h1>Video games</h1>
+            <p>
+              Ability to recognize hand motion, evolving interactions and
+              gameplay in VR.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/interaction-img.png"
+            />
+            <h1>Interaction</h1>
+            <p>
+              Interaction refers to the
+              <p1>natural interaction</p1> between the user and the virtual
+              scene.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/easy-play-img.png"
+            />
+            <h1>Easy to play</h1>
+            <p>
+              In 360-degree video, the locations of viewers are fixed, viewers
+              are limited to the angles captured by the cameras.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-4 mt-3 mb-2 text-center">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/experience-img.png"
+            />
+            <h1>Awesome Experience</h1>
+            <p>
+              Ability to recognize hand motion, evolving interactions and
+              gameplay in VR.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
