--- a/coding-practise- 08th May/VR Website Contact Us Section.html
+++ b/coding-practise- 08th May/VR Website Contact Us Section.html
@@ -27,5 +27,59 @@
     ></script>
     <link rel="stylesheet" href="./VR Website Contact Us Section.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- <div class="bg-container text-center p-3">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-7 order-md-2 mt-3 p-md-5 d-flex flex-column justify-content-center"
+          >
+            <div>
+              <h1>Virtually Anything is Possible</h1>
+            </div>
+            <div class="d-md-none">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-kit-1-img.png"
+                class="image w-100"
+              />
+            </div>
+            <div>
+              <button>CONTACT US</button>
+            </div>
+          </div>
+          <div class="col-12 col-md-5 d-none d-md-block order-md-1 mt-3">
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <div class="bg-container text-center p-3">
+      <div class="container">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 order-md-2 mt-4 p-md-5 d-flex flex-column justify-content-center"
+          >
+            <div>
+              <h1>Virtually Anything is Possible</h1>
+            </div>
+            <div class="d-md-none">
+              <img
+                src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-set-img.png"
+                class="image w-50"
+              />
+            </div>
+            <div>
+              <button>Contact Us</button>
+            </div>
+          </div>
+          <div class="col-12 col-md-5 d-none d-md-block order-md-1 mt-5">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-set-img.png"
+              class="image w-50"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
