--- a/Coding-practise- 09th May/VR Website Footer Section.html
+++ b/Coding-practise- 09th May/VR Website Footer Section.html
@@ -25,7 +25,93 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./VR Website Footer Section.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="bg-container pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-4 text-center d-md-none d-block pt-5">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png"
+              alt=""
+            />
+            <div class="d-flex flex-row justify-content-center">
+              <div class="icon-bg">
+                <i class="bi bi-google icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-twitter icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-instagram icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-linkedin icon"></i>
+              </div>
+            </div>
+            <h1>37, Ayur Vigyan Nagar, New Delhi, India.</h1>
+          </div>
+          <div class="col-12 col-md-4 text-left d-none d-md-block p-md-5">
+            <img
+              src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png"
+              alt=""
+            />
+            <div class="d-flex flex-row justify-content-left">
+              <div class="icon-bg">
+                <i class="bi bi-google icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-twitter icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-instagram icon"></i>
+              </div>
+              <div class="icon-bg">
+                <i class="bi bi-linkedin icon"></i>
+              </div>
+            </div>
+            <h1>37, Ayur Vigyan Nagar, New Delhi, India.</h1>
+          </div>
+
+          <div class="col-6 col-md-4 mt-md-5">
+            <h1 class="h1">contact us</h1>
+            <p>
+              <i class="bi bi-envelope icon1"></i>
+              vr@gmail.com
+            </p>
+            <p>
+              <i class="bi bi-telephone-fill icon1"></i>
+              123456789
+            </p>
+            <p>
+              <i class="bi bi-skype icon1"></i>
+              Rahul
+            </p>
+          </div>
+
+          <div class="col-6 col-md-4 mt-md-5">
+            <h1 class="h1">Let Us Help You</h1>
+            <p>100% Purchase</p>
+            <p>Protection</p>
+            <p>Your Account</p>
+            <p>Return Centre</p>
+            <p>Help</p>
+          </div>
+
+          <div class="col-12 text-center">
+            <hr />
+            <p class="p">
+              <i class="bi bi-c-circle icon1"></i>
+              2020 by Rahul. Created with Bootstrap.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
