--- a/Coding-practise- 09th May/Portfolio Website Testimonials Section.html
+++ b/Coding-practise- 09th May/Portfolio Website Testimonials Section.html
@@ -30,5 +30,93 @@
       href="./Portfolio Website Testimonials Section.css"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="main-bg-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1 id="h1">Testimonials</h1>
+            <h1 class="h1">Our Members says</h1>
+          </div>
+          <div class="col-12">
+            <div
+              id="carouselExample"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="card-bg-container">
+                    <img
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-testimonials-1-img.png"
+                    />
+
+                    <p>
+                      Jenny is one of the best hard-working developers, and it
+                      was a pleasure working with him. Having him on the project
+                      certainly made everything run smoother.
+                    </p>
+                    <br /><br />
+                    <p class="para">- Gautham, Founder of CocoPay Company</p>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="card-bg-container">
+                    <img
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-testimonials-2-img.png"
+                    />
+
+                    <p>
+                      Working with Jenny is an excellent experience. He is
+                      greatly talented developer. he has a steady approach
+                      towards his work.
+                    </p>
+                    <br /><br />
+                    <p class="para">
+                      - Nithin, Co-developer of CocoPay Company
+                    </p>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                  <div class="card-bg-container">
+                    <img
+                      src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-testimonials-3-img.png"
+                    />
+
+                    <p>
+                      Jenny can tackle critical situations, he worked on 2
+                      projects, and they were finished on time and delivered
+                      with excellent customer satisfaction.
+                    </p>
+                    <br /><br />
+                    <p class="para">- Sara, Co-Founder of CocoPay Company</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mt-3 text-right">
+                <a href="#carouselExample" role="button" data-slide="prev">
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span></a
+                >
+
+                <a href="#carouselExample" role="button" data-slide="next">
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
